Development
    Updated Turkish translation
    Rework streaming_media detection, seems to cause problems when using GIO and large http files
    Fix GTK Assertion in config_apply
    Set title to DVD when DVD title is not found
    Get rid of set_media_info_name
    Convert to XDG .config and .cache file locations
    Fix details resize issue
    Load cover art for CDs and also load the album name into the playlist
    Try to fix the TV issue
    Try and fix resize issue on new song
    Updated French translation
    Updated Polish translation
    Don't get album art when streaming or device
    Updated the paned resize and shrinking rules to work better
    Updated German Translation
    Copy gio temp file to $HOME/.gnome-mplayer/cache instead of /tmp
    Fix problems in ICY info display, due to rework of media_label
    Remove show_media_label
    Track media info visibility correctly
    Fix playlist and media info visibility when going fullscreen
    Fix Audio and Subtitle selection so that if we have a label the id isn't shown as well
    Changed File->DVD to File->Disc and moved Audio CD and added Video CD to the submenu
    Improved audio and subtitle selection, will put id in the menu if no label exists
    Fix missing data in copy_playlist
    Put media display name on status icon tooltip when playing or paused
    Add in loop to play_iter to flush all events prior to next file being played
    When running in verical layout mode, allow the media data to remain visible
    Read album off the ipod
    Add album to the playlist
    Disable cover art fetch command line option
    Update recent menu and title bar to show artist and title when available
    Don't lookup coverart if we got it from the ipod
    Convert tempnam to gmp_tempname
    Fix memory leak in parse_basic
    Fix problem with opening a ASF reference playlist
    Change filtering rules to only use song title when necessary, gives better results